# ChangeLog for x11-themes/mythtv-themes
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/mythtv-themes/ChangeLog,v 1.37 2007/08/29 15:03:03 cardoe Exp $

  29 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  -mythtv-themes-0.20.2_p14282.ebuild, mythtv-themes-0.20.2_p14301.ebuild:
  stable 0.20.2 for Schedules Direct support needed by Sept 1

*mythtv-themes-0.20.2_p14301 (27 Aug 2007)

  27 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  +mythtv-themes-0.20.2_p14301.ebuild:
  bump. fix vanishing icons

*mythtv-themes-0.20.2_p14282 (24 Aug 2007)

  24 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  +mythtv-themes-0.20.2_p14282.ebuild:
  update to 0.20.2

*mythtv-themes-0.20.1_p14221 (21 Aug 2007)

  21 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  +mythtv-themes-0.20.1_p14221.ebuild:
  svn -fixes version mythtv-themes-0.20.1_p14221.ebuild

*mythtv-themes-0.21_pre14221 (21 Aug 2007)

  21 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  +mythtv-themes-0.21_pre14221.ebuild:
  trunk bump

*mythtv-themes-0.21_pre14153 (13 Aug 2007)

  13 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  mythtv-themes-0.20.1.ebuild, mythtv-themes-0.21_pre13285.ebuild,
  mythtv-themes-0.21_pre13775.ebuild, +mythtv-themes-0.21_pre14153.ebuild:
  trunk rev bump. RDEPEND -> DEPEND.

*mythtv-themes-0.21_pre13775 (28 Jun 2007)

  28 Jun 2007; Doug Goldstein <cardoe@gentoo.org>
  -mythtv-themes-0.20.ebuild, -mythtv-themes-0.21_pre12945.ebuild,
  +mythtv-themes-0.21_pre13775.ebuild:
  bump trunk build. nuke old build

  12 Jun 2007; Doug Goldstein <cardoe@gentoo.org>
  mythtv-themes-0.20.1.ebuild:
  Stable on amd64, ppc, x86

  30 Apr 2007; Doug Goldstein <cardoe@gentoo.org>
  mythtv-themes-0.20.1.ebuild, mythtv-themes-0.21_pre12945.ebuild,
  mythtv-themes-0.21_pre13285.ebuild:
  Fixing accidently keywords

*mythtv-themes-0.20.1 (26 Apr 2007)

  26 Apr 2007; Doug Goldstein <cardoe@gentoo.org>
  +mythtv-themes-0.20.1.ebuild: