@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/mythtv-themes/mythtv-themes-0.21_pre13775.ebuild,v 1.2 2007/08/13 21:05:50 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/mythtv-themes/mythtv-themes-0.21_pre14467.ebuild,v 1.1 2007/09/21 16:59:02 cardoe Exp $
 
 inherit qt3 mythtv subversion
 
