@@ -1,6 +1,13 @@
 # ChangeLog for x11-themes/mythtv-themes
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/mythtv-themes/ChangeLog,v 1.37 2007/08/29 15:03:03 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/mythtv-themes/ChangeLog,v 1.38 2007/09/21 16:59:02 cardoe Exp $
+
+*mythtv-themes-0.21_pre14467 (21 Sep 2007)
+
+  21 Sep 2007; Doug Goldstein <cardoe@gentoo.org>
+  -mythtv-themes-0.21_pre13285.ebuild, -mythtv-themes-0.21_pre13775.ebuild,
+  -mythtv-themes-0.21_pre14153.ebuild, +mythtv-themes-0.21_pre14467.ebuild:
+  upstream rev bump
 
   29 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
   -mythtv-themes-0.20.2_p14282.ebuild, mythtv-themes-0.20.2_p14301.ebuild:
